--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,13 @@
 body {
-    text-align: center;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
 
 h1 {
     margin-top: 50px; 
@@ -23,17 +28,23 @@ label, input, button {
 
 label {
     font-size: 16px; 
+    width: 200px;
+    text-align: left;
+    padding-left: 10px;
+    white-space: nowrap; /* Evita quebra de linha no rótulo */
 }
 
 input {
     padding: 10px; 
     width: 100%; 
 }
+
 #result-data {
     max-width: 90%; 
     font-size: 16px; 
-    white-space: pre-wrap; 
-    word-wrap: break-word; 
+    list-style: none; /* Remova os marcadores de lista */
+    padding: 0;
+    text-align: left;
 }
 
 button {
@@ -47,5 +58,4 @@ button {
 
 button:hover {
     background-color: #0056b3; 
-}
 }
